# sjisgrep

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: encoding.rs  main.rs  search.rs
